--- a/src/task-03.html
+++ b/src/task-03.html
@@ -7,7 +7,7 @@
     <title>Task 3</title>
     <link rel="stylesheet" href="css/common.css" />
   </head>
-  <body>
+  <img>
     <p><a href="index.html">Go back</a></p>
 
     <ul class="gallery"></ul>
